# Sandman

./: .gitignore  Cargo.toml  README.md
docs/: example_sandman_config.toml
sandman/: Cargo.toml
sandman-config/: Cargo.toml
sandman-config/src/: app.rs  main.rs
sandman-share/: Cargo.toml
sandman-share/src/: config.rs  consts.rs  lib.rs  paths.rs
sandman/src/: args.rs  backup.rs  config.rs  gatherer.rs  main.rs  sandman.rs  sha.rs
src/: args.rs  backup.rs  config.rs  main.rs  sandman.rs  sha.rs
test_upload_directory/backup_1/: .sandman_history  .sandmanignore  foo.txt
test_upload_directory/backup_2/: .sandman_history  .sandmanignore
