[package]
name = "rust_backup"
version = "0.1.0"
edition = "2021"

[dependencies]
sha256 = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
clap = "4.5.9"
clap_derive = "4.5.8"
rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
sha2 = "0.9.9"
toml = "0.8.14"