[package]
name = "sandman"
version = "0.1.0"
edition = "2021"

[dependencies]
sandman-share = {path = "../sandman-share"}
sha256 = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
clap = "4.5.9"
clap_derive = "4.5.8"
rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
sha2 = "0.10.8"
toml = "0.8.14"
async-trait = "0.1.81"
env_logger = "0.11.3"
log = "0.4.22"
ignore = "0.4.22"
async-std = "1.12.0"
uuid = { version = "1.10.0", features = ["v4"] }